--- a/Admin/about/en-GB/credits.html
+++ b/Admin/about/en-GB/credits.html
@@ -14,6 +14,7 @@
     <h4 style="margin-bottom: 2px;">Icons and graphics used in SobiPro</h4>
 	<ul>
         <li><a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">Font Awesome</a> by Dave Gandy</li>
+        <li><a href="https://www.google.com/design/icons/" target="_blank">Material icons</a> by Google</li>
 		<li><a href="http://www.oxygen-icons.org/" target="_blank">Oxygen Icons</a></li>
 		<li><a href="http://mediadesign.deviantart.com/" target="_blank">HydroPro Icons</a> by Benjamin Fleming / *MediaDesign</li>
 		<li><a href="http://tiheum.deviantart.com/" target="_blank">Faenza Icons</a> by Matthieu James</li>
