small layout improvements

--- a/Admin/about/en-GB/credits.html
+++ b/Admin/about/en-GB/credits.html
@@ -1,4 +1,4 @@
-<div style="height: 460px;">
+<div style="height: 460px; overflow-y: scroll;">
 	<h4 style="margin-bottom: 2px;">The Sobi Team</h4>
 	<ul>
 		<li><a href="http://sigrid.sigsiu.net/" target="_blank">Sigrid Suski aka Trinity</a><br/>
