--- a/Admin/about/en-GB/license.html
+++ b/Admin/about/en-GB/license.html
@@ -1,4 +1,4 @@
-<div style="height: 500px; overflow: scroll;">
+<div style="height: 500px; overflow-y: scroll;">
 <h4 style="padding-left: 0px"><img src="components/com_sobipro/about/gplv3.png" alt="SobiPro is released under the GNU General Public License V3" /> SobiPro is released under the GNU General Public License V3</h4>
 <h5>Additional Terms according section 7 of GNU/GPL V3</h5>
 <p>These additional terms refer to SobiPro and its applications (hereinafter referred to as Software) and any updates to Software.</p>
