new club banner and URLs corrected in file headers

--- a/Admin/about/en-GB/credits.html
+++ b/Admin/about/en-GB/credits.html
@@ -2,13 +2,11 @@
 	<h4 style="margin-bottom: 2px;">The Sobi Team</h4>
 	<ul>
 		<li><a href="http://sigrid.sigsiu.net/" target="_blank">Sigrid Suski aka Trinity</a><br/>
-            Core Developer, Quality &amp; Testing, Documentation, Translation, Support, Public Relations</li>
+            Core Developer, Design, Quality &amp; Testing, Documentation, Translation, Support, Public Relations</li>
 		<li><a href="http://radek.sigsiu.net/" target="_blank">Radek Suski aka Neo</a><br/>
-            Core Developer, Software Engineering, Support</li>
+            Core Developer, Software Engineering, Support, Development</li>
 		<li>Sławek Sikora aka sikor79<br/>
-            Quality &amp; Testing, Documentation, Support</li>
-		<li>Isidro Baquero aka Isidro<br/>
-            Quality &amp; Testing, Documentation, Support</li>
+            Quality &amp; Testing, Support</li>
 	</ul>
 
     <h4 style="margin-bottom: 2px;">Icons and graphics used in SobiPro</h4>
